
2007-07-25  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/tp-robot: Show comments from 'msgfmt' only once.

2007-07-24  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/localweb.py: Use magenta also on domain pages to indicate a
	conflict: translation marked as external but PO file is present.

	* lib/localweb.py: Put language name before language code on domain
	pages and on team index, as that is the field the table is sorted on.

	* lib/run.py, bin/tp-robot: Remove "TP-robot" from the subject line
	of the reply email to the translator; remove unused orig_subject.

2007-07-23  Benno Schulenberg  <benno@vertaalt.nl>

	* registry/registry.sgml: Rename 'GNUnet' to 'gnunet', to be
	consistent and have everything alphabetically.

2007-07-22  Benno Schulenberg  <benno@vertaalt.nl>

	* registry/registry.sgml: Delete the old, empty teams for Norwegian
	Bokmaal and Norwegian Nynorsk.

	* lib/localweb.py: Put "yes" in lower case; make Autosend column
	more informative; do not link names to URLs.

	* lib/localweb.py: Do not show Last-Submitted column for external
	translations, use grey to colour code such externals, show "unknown"
	also on team page, and use magenta to show a conflict: translation
	is marked as external but PO file is present.

	* bin/po-register: Add option to not show mails when running dry.

2007-07-21  Benno Schulenberg  <benno@vertaalt.nl>

	* registry/AUTHORS: Delete copyright assignments and disclaimers that
	do not belong here; they were not PO translators.

	* lib/run.py, bin/tp-robot: Add newlines in one spot instead of all
	over the place.

	* registry/registry.sgml: Remove the obsolete domains 'gbiff' and
	'darkstat'.

	* registry/AUTHORS: Sort disclaimers by date and name.

2007-07-20  Benno Schulenberg  <benno@vertaalt.nl>

	* registry/AUTHORS: Add 18 missing disclaimers from FSF file (except
	Chinese and Korean ones, as I don't comprehend those), add several
	missing diacritics, change some postfix diacritics to real ones, and